@@ -1,3 +1,12 @@
+2021-08-02  Stephan Szabo  <stephan.szabo@sony.com>
+
+        [PlayStation] Make C files in testapi compile with a C standard rather than C++ one
+        https://bugs.webkit.org/show_bug.cgi?id=228701
+
+        Reviewed by Ross Kirsling.
+
+        * shell/PlatformPlayStation.cmake: Set standard for C files in testapi
+
 2021-08-02  Yusuke Suzuki  <ysuzuki@apple.com>
 
         [JSC] Yarr should use Bitmap instead of ByteVector for BoyerMoore search
